--- a/views/common/_master.pug
+++ b/views/common/_master.pug
@@ -1,4 +1,4 @@
-include _nav
+include _header
 
 <!DOCTYPE html>
 html(lang="en")
@@ -12,6 +12,6 @@ head
     block head_scripts
     title Team Fade
 body
-    +nav()
+    +header()
     block body
-    
+     
