a little less worse

--- a/views/common/_header.pug
+++ b/views/common/_header.pug
@@ -2,6 +2,6 @@ include _nav
 include _logo
 
 mixin header
-    div(class="container" id="header")
+    div(class="container-fluid row" id="header")
         +logo()
         +nav()
