--- a/views/common/_logo.pug
+++ b/views/common/_logo.pug
@@ -1,4 +1,4 @@
 mixin logo
-    div(class='container col-md-3' id="logo")        
-        h1(class="text-center")
+    div(class='col-md-3' id="logo")        
+        p(class="text-center")
             |FADE
