--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,21 +4,24 @@ body {
     padding: 0;    
 }
 
-#header {
+#header{
     margin: 0;
     padding: 0;
-    width: 100%;
+
 }
 
-#navbar {
+#navbar{
     margin: 0;
     padding: 0;
-    width: 100%;
+
 }
 
-#logo h1 {
-    margin-top: 3%;
-    font-size: 5.5rem;
+#logo{
+    margin: 0;
+    padding: 0;
+}
+#logo p {     
+    font-size: 4.5rem;
     color: black;
 }
 
@@ -37,21 +40,21 @@ body {
 ul {
     list-style-type: none;
 }
+ul li{
+    padding: 1.1%;
+} 
 
-ul li {
-    padding: 0.85%;
-}
-
-ul li p {
+ul li a {
     color: #F5F5F5;
-    font-size: 23px;
+    font-size: 1.5rem;
     text-decoration-style: none;
+    display: block;
 }
 
 a:hover {
     text-decoration: none;
+    color: #F5F5F5;
 }
-
-ul li:hover {
+li:hover{
     opacity: 0.75;
 }
