some ui improvements

--- a/views/common/_nav.pug
+++ b/views/common/_nav.pug
@@ -8,8 +8,8 @@ mixin nav
             li(class="col-md-4" id="navbar-about")   
                 a(href='/about')
                     p(class="text-center")
-                        | About           
+                        | About us         
             li(class="col-md-4" id="navbar-ranking")
                 a(href='/ranking')
                     p(class="text-center")
-                        | Ranking
+                        | Top Events
