--- a/views/navigation/ranking.pug
+++ b/views/navigation/ranking.pug
@@ -1,5 +1,4 @@
 extend ../common/_master
 
 block body
-    h1  
-        | Ranking
+        link(rel='stylesheet', href='../../public/css/ranking.css', type='text/css' )
