--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,28 +1,34 @@
 html,
 body {
     margin: 0;
+    padding: 0;
+}
+
+
+#header {
+    margin: 0;
+    padding: 0;
+
+}
+
+#navbar {
+    margin: 0;
+    padding: 0;
+
+}
+#navbar ul{
+    margin: 0;
+    padding: 0;
+}
+
+#logo {
+    margin: 0;
     padding: 0;    
-}
+}  
 
-#header{
-    margin: 0;
-    padding: 0;
-
-}
-
-#navbar{
-    margin: 0;
-    padding: 0;
-
-}
-
-#logo{
-    margin: 0;
-    padding: 0;
-}
-#logo p {     
-    font-size: 4.5rem;
-    color: black;
+#logo > p {
+    font-size: 2.4em;
+    color: #0F1626;
 }
 
 #navbar-home {
@@ -40,21 +46,25 @@ body {
 ul {
     list-style-type: none;
 }
-ul li{
+
+ul li {
     padding: 1.1%;
-} 
+}
 
 ul li a {
     color: #F5F5F5;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     text-decoration-style: none;
     display: block;
+    height: 100%;
 }
 
 a:hover {
     text-decoration: none;
     color: #F5F5F5;
 }
-li:hover{
+
+li:hover {
     opacity: 0.75;
 }
+
