--- a/views/navigation/about.pug
+++ b/views/navigation/about.pug
@@ -1,5 +1,4 @@
 extend ../common/_master
 
 block body
-    h1  
-        | About
+    link(rel='stylesheet', href='../../public/css/about.css', type='text/css' )
