--- a/views/navigation/home.pug
+++ b/views/navigation/home.pug
@@ -1,5 +1,5 @@
 extend ../common/_master
 
 block body
-    h1  
-        | Home
+    link(rel='stylesheet', href='../../public/css/home.css', type='text/css' )
+    
