--- a/views/navigation/home.pug
+++ b/views/navigation/home.pug
@@ -2,4 +2,9 @@ extend ../common/_master
 
 block body
     link(rel='stylesheet', href='../../public/css/home.css', type='text/css' )
+    div(id="home-nav")
+        a(href="/browse-events" id="browse-events-btn")
+            |Browse Events
+        a(href="/signin" id="sign-in-btn")
+            |Sign In
     
