--- a/public/css/users/signin.css
+++ b/public/css/users/signin.css
@@ -2,14 +2,14 @@ html, body{
     margin: 0;
     padding: 0;
 }
-#sign-in-form{
+#login-form{
     margin: 0;
     padding: 0;
     width: 15%;
     margin-left: 40%;
     margin-top: 5%;
 }
-#sign-in-btn{
+#login-btn{
     margin-left: 5%;    
     background-color: #0F1626;
 }
