renaming and styling fixes

--- a/views/navigation/home.pug
+++ b/views/navigation/home.pug
@@ -5,6 +5,6 @@ block body
     div(id="home-nav")
         a(href="/browse-events" id="browse-events-btn")
             |Browse Events
-        a(href="/signin" id="sign-in-btn")
+        a(href="/login" id="sign-in-btn")
             |Sign In
     
