--- a/views/users/register.pug
+++ b/views/users/register.pug
@@ -2,7 +2,7 @@ extend ../common/_master
 
 block body
     link(rel='stylesheet', href='../../public/css/users/register.css', type='text/css' )
-    form(id='sign-in-form' action="/register" method="POST")
+    form(id='register-form' action='/register' method='POST')
         div(class='form-group')
             label(for='username' class='col-2 col-form-label')
                 |Username
