--- a/views/users/login.pug
+++ b/views/users/login.pug
@@ -15,8 +15,7 @@ block body
             |Login
         span(id='or-span')
             |or
-        button(type='submit' class='btn btn-danger' id='register-btn')
+        button(class='btn btn-danger' type="button" onclick="window.location.href='/register'" id='register-btn')
                 a(href="/register")
                     |Register
-        
         
