--- a/views/users/login.pug
+++ b/views/users/login.pug
@@ -1,7 +1,9 @@
 extend ../common/_master
 
+
 block body
     link(rel='stylesheet', href='../../public/css/users/signin.css', type='text/css' )
+    != messages()
     form(id='login-form' action='/login' method='POST')
         div(class='form-group')
             label(for='username' class='col-2 col-form-label')
