--- a/views/common/_header.pug
+++ b/views/common/_header.pug
@@ -1,6 +1,7 @@
 include _nav
-include _logo
 
 mixin header()
     div(class="container-fluid row" id="header")
+        div(class="col-md-4")
+            |Test
         +nav()
