--- a/views/common/_master.pug
+++ b/views/common/_master.pug
@@ -11,7 +11,8 @@ head
     block styles
     block head_scripts
     title Team Fade
-body
+block header
     +header()
-    block body
-     
+block body
+block footer
+    div(class="container-fluid" id="footer")
