--- a/views/users/register.pug
+++ b/views/users/register.pug
@@ -28,5 +28,5 @@ block body
             label(for='password' class='col-2 col-form-label')
                 |Password
             input(name='password' type='password' class='form-control' id='password' aria-describedby='passwordHelp' placeholder='Enter password' minlength="6" required)
-        button(type='sumbit' class='btn btn-danger' id='register-btn')
+        button(type='sumbit' class='btn ' id='register-btn')
                 |Register
