--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,33 +1,30 @@
-body {
-    background-image: url('../imgs/home-background.jpg');
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    background-position: center;
-    background-position-y: 11%;
-}
-
 #home-nav {
     margin: 0;
     padding: 0;
     display: block;
-    margin-left: 40%;
-    margin-top: 15%;
+    margin-left: 30%;
+    margin-top: 3%;
 }
 
 #home-nav a {
     margin: 0;
     padding: 0;
-    background-color: #0F1626;
-    color: #f5f5f5;
+    background-color: #A01D26;
+    color: #F4F4EF;
     font-size: 1.5rem;
     margin-left: 1%;
-    padding: 1% 3% 1% 3%;   
-    
+    padding: 1% 3% 1% 3%;       
 }
-
-#home-nav a:hover {
-    color: #FF533D;
+#home-nav p{
+    margin-top: 1%;
+    color: #A01D26;
+}
+#home-text{
+    margin-left: 2.5%;
+    margin-top: 5%;
+    font-size: 1.5rem;  
+    color: #A01D26;
+}
+.home-nav-left{
+    margin-left: 25%;
 }
