--- a/public/css/users/signin.css
+++ b/public/css/users/signin.css
@@ -9,18 +9,19 @@ html, body{
     margin-left: 40%;
     margin-top: 5%;
 }
-#login-btn{
+#sign-in-btn{
     margin-left: 5%;    
-    background-color: #0F1626;
+    background-color: #20232A;
+    color: #F4F4EF;
+    text-decoration: none;
 }
 #or-span{
     margin-left: 5%;
 }
 #register-btn{
-    background-color: #FF533D;
+    background-color: #A01d26;
     margin-left: 5%;
+    color: #F4F4EF;    
+    text-decoration: none;
 }
-#register-btn a {
-    color: white;
-    text-decoration: none
-}
+ 
