--- a/views/common/_master.pug
+++ b/views/common/_master.pug
@@ -15,4 +15,4 @@ block header
     +header()
 block body
 block footer
-    div(class="container-fluid" id="footer")
+    div(class="container-fluid col-md-12 fixed-bottom" id="footer")
