Profile editting now works

--- a/views/users/profile.pug
+++ b/views/users/profile.pug
@@ -10,7 +10,7 @@ block body
                 .col-sm-6.col-md-8.text-center
                     h4#name
                         span#first-name= user.firstName + ' '
-                        span#last-name= user.lastname                        
+                        span#last-name= user.lastName                        
                     h4#username
                         = user.username
                     i.glyphicon.glyphicon-map-marker
