simple reformatting and renaming

--- a/views/users/profile.pug
+++ b/views/users/profile.pug
@@ -6,7 +6,7 @@ block body
         .well.well-sm
             .row
                 .col-sm-6.col-md-4
-                    img.img-rounded.img-responsive(src=user.imageUrl, alt=user.username)                
+                    //- img.img-rounded.img-responsive(src=user.imageUrl, alt=user.username)                
                 .col-sm-6.col-md-8.text-center
                     h4#name
                         span#first-name= user.firstName + ' '
