--- a/views/common/_master.pug
+++ b/views/common/_master.pug
@@ -8,6 +8,7 @@ head
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     link(rel='stylesheet', href="/libs/bootstrap/dist/css/bootstrap.min.css")
     link(rel='stylesheet', href="../../public/css/main.css")
+    script(src='/libs/jquery/dist/jquery.js')
     block styles
     block head_scripts
     title Team Fade
